--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(15,23,42);
+  color: white;
 }
 
 h1 {
