--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: rgb(15,23,42);
   color: white;
+  background-image: url('https://wallpapers.com/images/hd/soothing-vintage-music-aesthetic-zt916qz666u2503u.jpg');
+  background-repeat: repeat;
 }
 
 h1 {
